# enterprise-ai-search

./: .env.example  .gitignore  .pre-commit-config.yaml  BEFORE_PUBLISHING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_ENHANCEMENTS.md  README.md  SECURITY.md  docker-compose.yml  ingest.py  pyproject.toml  query.py  requirements-dev.txt  requirements.txt  setup.py  setup_check.py
.github/workflows/: badges.yml  ci.yml
data/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  README.md
src/: __init__.py  config.py  ingest.py  query.py  test_embedding.py
tests/: README.md  test_basic.py
